# chat_simulator

./: CMakeLists.txt
source/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
source/ClientSide/: MessageGenerator.cpp  MessageGenerator.h  User.cpp  User.h  UserController.cpp  UserController.h  UserWidget.cpp  UserWidget.h  UserWidget.ui
source/ServerSide/: Server.cpp  Server.h  ServerUser.cpp  ServerUser.h
